2021-08-31  Ayumi Kojima  <ayumi_kojima@apple.com>

        [ Monterey GuardMalloc ] accessibility/* tests are timing out.
        <rdar://82147955>

        Unreviewed test gardening.

        * platform/mac-wk2/TestExpectations:

2021-08-31  Ayumi Kojima  <ayumi_kojima@apple.com>

        [ iOS Release ] svg/W3C-SVG-1.1/struct-dom-06-b.svg is flaky text failing.
        https://bugs.webkit.org/show_bug.cgi?id=229743

        Unreviewed test gardening.

        * platform/ios-wk2/TestExpectations:

2021-08-31  Marcos Caceres  <marcos@marcosc.com>

        [Payment Request] Calling PaymentRequest's show() should consume user activation
        https://bugs.webkit.org/show_bug.cgi?id=217365

        Reviewed by Youenn Fablet and Devin Rousso.

        * http/tests/paymentrequest/payment-is-showing.https.html:
        * http/tests/paymentrequest/payment-request-show-method.https.html:
        * platform/ios-wk2/imported/w3c/web-platform-tests/payment-request/show-method-optional-promise-rejects.https-expected.txt: Removed.

2021-08-31  Eric Hutchison  <ehutchison@apple.com>

        Update test expectations for iOS14 fast/ tests.
        https://bugs.webkit.org/show_bug.cgi?id=229656.

        Unreviewed test gardening.

        * platform/ios-wk2/TestExpectations:
        * platform/ipad/TestExpectations:

2021-08-31  Carlos Alberto Lopez Perez  <clopez@igalia.com>

        [GTK][WPE] Gardening of test failures

        Unreviewed test gardening.

        Report and mark new expected failures and rebase-line a few tests.

        * platform/glib/TestExpectations:
        * platform/gtk/TestExpectations:
        * platform/gtk/fast/forms/basic-textareas-expected.png:
        * platform/gtk/fast/forms/basic-textareas-expected.txt:
        * platform/gtk/imported/w3c/web-platform-tests/inert/inert-retargeting-iframe.tentative-expected.txt: Added.
        * platform/wpe/fast/forms/basic-textareas-expected.png: Added.